--- a/css/style.scss
+++ b/css/style.scss
@@ -227,6 +227,7 @@ main {
                 padding: 20px;
                 li {
                     padding: 10px;
+                    margin: 0 5px;
                     text-transform: uppercase;
                     a {
                         color: #000;
@@ -236,6 +237,30 @@ main {
                 li:hover {
                     background-color: #000;
                     a {
+                        color: #FFF;
+                    }
+                }
+                .li-about{
+                    background-color: #000;
+                    a{
+                        color: #FFF;
+                    }
+                }
+                .li-works{
+                    background-color: #000;
+                    a{
+                        color: #FFF;
+                    }
+                }
+                .li-blog{
+                    background-color: #000;
+                    a{
+                        color: #FFF;
+                    }
+                }
+                .li-contact{
+                    background-color: #000;
+                    a{
                         color: #FFF;
                     }
                 }
