topのmenuを最下部に修正/タイトルを中央に修正

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,6 @@
 @import "compass";
 @import url('https://fonts.googleapis.com/css?family=Abel');
+@import "top_footer";
 // font-family
 $baseFontFamily: しねきゃぷしょん,
 "游ゴシック",
@@ -279,32 +280,6 @@ main {
         }
         .non_top_mainVisual {
             padding-bottom: 100px;
-        }
-        .menu-pc {
-            display: block;
-            width: 100%;
-            text-transform: uppercase;
-            ul {
-                width: 60%;
-                margin: 0 auto;
-                display: flex;
-                justify-content: space-between;
-                li {
-                    padding: 10px;
-                    a {
-                        color: #000;
-                        transition: all 2.0s;
-                    }
-                }
-                li:hover {
-                    background-color: #000;
-                    color: #FFF;
-                    border-radius: 5px;
-                    a {
-                        color: #FFF;
-                    }
-                }
-            }
         }
     }
 }
