--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,54 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Abel");
+#html_top {
+  height: 100%; }
+  #html_top body {
+    height: 90%; }
+    #html_top body main {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      #html_top body main #mainVisual {
+        display: block; }
+
+footer {
+  display: none; }
+
+@media (min-width: 768px) {
+  #html_top body {
+    margin: 0;
+    display: flex;
+    flex-flow: column;
+    min-height: 100vh; }
+  #html_top main {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    #html_top main #mainVisual {
+      display: block; }
+  #html_top footer {
+    display: block;
+    width: 100%;
+    text-transform: uppercase; }
+    #html_top footer ul {
+      width: 60%;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between; }
+      #html_top footer ul li {
+        padding: 10px; }
+        #html_top footer ul li a {
+          color: #000;
+          transition: all 2.0s; }
+      #html_top footer ul li:hover {
+        background-color: #000;
+        color: #FFF;
+        border-radius: 5px; }
+        #html_top footer ul li:hover a {
+          color: #FFF; } }
 * {
   padding: 0;
   margin: 0;
@@ -190,27 +239,7 @@ main {
     padding-top: 20%;
     padding-bottom: 22%; }
   main .non_top_mainVisual {
-    padding-bottom: 100px; }
-  main .menu-pc {
-    display: block;
-    width: 100%;
-    text-transform: uppercase; }
-    main .menu-pc ul {
-      width: 60%;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between; }
-      main .menu-pc ul li {
-        padding: 10px; }
-        main .menu-pc ul li a {
-          color: #000;
-          transition: all 2.0s; }
-      main .menu-pc ul li:hover {
-        background-color: #000;
-        color: #FFF;
-        border-radius: 5px; }
-        main .menu-pc ul li:hover a {
-          color: #FFF; } }
+    padding-bottom: 100px; } }
 main #container {
   max-width: 1440px;
   width: 100%;
